--- a/components/dashboard/BabyTodayCard/BabyTodayCard.module.css
+++ b/components/dashboard/BabyTodayCard/BabyTodayCard.module.css
@@ -111,8 +111,13 @@
   .descriprion {
     font-size: 16px;
   }
+
   .card {
     height: 422px; 
+    overflow: hidden;
   }
-
+  .content {
+    height: 100%;
+    overflow-y: auto;
+  }
 }
