--- a/components/dashboard/MomTipCard/MomTipCard.module.css
+++ b/components/dashboard/MomTipCard/MomTipCard.module.css
@@ -46,5 +46,10 @@
   .card {
     height: 138px;
     margin-top: 24px;
+    overflow: hidden;
+  }
+  .content {
+    height: 100%;
+    overflow-y: auto;
   }
 }
