--- a/components/journey/WeekSelector/WeekSelector.module.css
+++ b/components/journey/WeekSelector/WeekSelector.module.css
@@ -66,7 +66,14 @@
   height: 101px;
   background: #ffcbd3;
 }
-
+.current {
+  border: 4px solid rgba(0, 0, 0, 0.15);
+  border-radius: 32px;
+  padding: 16px;
+  width: 97px;
+  height: 101px;
+  background: #ffcbd3;
+}
 .week:disabled {
   border: 0px solid rgba(0, 0, 0, 0.15);
   border-radius: 32px;
