--- a/components/profile/ProfileAvatar/ProfileAvatar.module.css
+++ b/components/profile/ProfileAvatar/ProfileAvatar.module.css
@@ -1,11 +1,5 @@
-.wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-}
-
 .name {
-    font-family: var(--second-family);
+font-family: var(--second-family);
     font-weight: 700;
     font-size: 20px;
     line-height: 140%;
@@ -15,10 +9,40 @@
 }
 
 .email {
-    font-family: var(--font-family);
+font-family: var(--font-family);
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
     text-align: center;
     color: var(--color-scheme-text);
+    margin-bottom: 16px;
 }
+
+/* Tablet & Desktop 768px+ */
+@media only screen and (min-width: 768px) {
+
+    .name{
+        font-family: var(--second-family);
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 140%;
+            letter-spacing: 0.01em;
+            color: var(--color-scheme-text);
+    }
+    .email {
+        text-align: left;
+    }
+}
+
+
+@media only screen and (min-width: 1440px) {
+.name{
+    font-family: var(--second-family);
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 140%;
+        letter-spacing: 0.01em;
+        color: var(--color-scheme-text);
+}
+}
+
