--- a/components/profile/ProfileEditForm/ProfileEditForm.module.css
+++ b/components/profile/ProfileEditForm/ProfileEditForm.module.css
@@ -1,3 +1,5 @@
+
+
 .inputFields {
   display: flex;
   flex-direction: column;
@@ -9,6 +11,10 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.dateLabel{
+  margin-bottom: 24px;
 }
 
 /* =========================
@@ -70,6 +76,7 @@
 .buttonContainer {
   display: flex;
   gap: 16px;
+  justify-content: start;
 }
 
 .saveChanges {
@@ -159,6 +166,10 @@
 
 @media only screen and (min-width: 1440px) {
 
+  .fullLowerContent {
+      max-width: 583px;
+    }
+
   .label,
   .field,
   .dateWrapper {
@@ -168,6 +179,6 @@
   .buttonContainer {
     display: flex;
     gap: 16px;
-    justify-content: center;
+    justify-content: flex-end;
   }
 }
