--- a/components/journey/MomyJourney/momyJourney.module.css
+++ b/components/journey/MomyJourney/momyJourney.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding: 16px 20px 24px;
+  padding: 16px 12px 24px;
 }
 
 .container_wrap {
@@ -12,6 +12,9 @@
 }
 
 @media (min-width: 768px) {
+  .container_mom {
+    padding: 16px 0 24px 0;
+  }
 }
 
 @media (min-width: 1440px) {
@@ -19,6 +22,5 @@
     display: flex;
     flex-direction: row;
     gap: 24px;
-    padding: 16px 32px 24px;
   }
 }
