--- a/components/journey/MomyJourney/momyJourney.module.css
+++ b/components/journey/MomyJourney/momyJourney.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding: 16px 12px 24px;
+  padding: 16px 0 24px 0;
 }
 
 .container_wrap {
@@ -11,11 +11,7 @@
   gap: 24px;
 }
 
-@media (min-width: 768px) {
-  .container_mom {
-    padding: 16px 0 24px 0;
-  }
-}
+@media (min-width: 768px) {}
 
 @media (min-width: 1440px) {
   .container_mom {
