--- a/app/error.module.css
+++ b/app/error.module.css
@@ -16,12 +16,12 @@
 }
 
 .title {
-  margin: 0 0 10px 0;
+  margin: 0 0 20px 0;
   font-size: 34px;
   font-weight: var(--fw-bold);
   text-align: center;
 
-  max-width: 300px;
+  max-width: 335px;
 }
 
 .desc {
@@ -36,6 +36,7 @@
 
   padding: 10px 12px;
   border-radius: 12px;
+  max-width: 335px;
 
   background: var(--opacity-neutral-darkest-5, rgba(0, 0, 0, 0.05));
   color: var(--color-neutral-darker, #191919);
@@ -48,8 +49,10 @@
 
 .actions {
   display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+
   justify-content: center;
-  align-items: center;
 }
 
 /* desktop: split */
@@ -60,6 +63,11 @@
 @media only screen and (min-width: 768px) {
   .title {
     font-size: 40px;
+    max-width: 400px;
+  }
+
+  .devMsg {
+    max-width: 400px;
   }
 }
 
@@ -90,6 +98,5 @@
 
   .title {
     font-size: 48px;
-    max-width: 400px;
   }
 }
